// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should render the textarea 1`] = `
<div
  class="class-for-wrapper"
>
  <textarea
    class="textarea"
    id="textarea-42"
    name="textarea-42"
  />
</div>
`;

exports[`TextArea should render the textarea disabled 1`] = `
<div
  class="class-for-wrapper"
>
  <textarea
    class="textarea"
    disabled=""
    id="textarea-42"
    name="textarea-42"
  />
</div>
`;

exports[`TextArea should render the textarea required 1`] = `
<div
  class="class-for-wrapper"
>
  <textarea
    class="textarea"
    id="textarea-42"
    name="textarea-42"
    required=""
  />
</div>
`;

exports[`TextArea should render the textarea with caption 1`] = `
<div
  class="class-for-wrapper"
>
  <textarea
    aria-describedby="textarea-42-caption"
    class="textarea"
    id="textarea-42"
    name="textarea-42"
  />
  <div
    class="caption"
    id="textarea-42-caption"
  >
    More details...
  </div>
</div>
`;

exports[`TextArea should render the textarea with error 1`] = `
<div
  class="class-for-wrapper"
>
  <textarea
    class="textarea error"
    id="textarea-42"
    name="textarea-42"
  />
  <div
    class="caption error"
    id="textarea-42-caption"
  >
    This textarea is invalid
  </div>
</div>
`;

exports[`TextArea should render the textarea with label 1`] = `
<div
  class="class-for-wrapper"
>
  <label
    class="label label"
    for="textarea-42"
  >
    Label of textarea
  </label>
  <textarea
    class="textarea"
    id="textarea-42"
    name="textarea-42"
  />
</div>
`;
